--- a/.github/workflows/python-package-pypi.yaml
+++ b/.github/workflows/python-package-pypi.yaml
@@ -29,6 +29,10 @@ jobs:
         PLACEHOLDER='version = \"develop\"'
         VERSION_FILE='setup.py'
 
+        echo "VERSION=$VERSION"
+        echo "PLACEHOLDER=$PLACEHOLDER"
+        echo "VERSION_FILE=$VERSION_FILE"
+
         # ensure the placeholder is there. If grep doesn't find the placeholder
         # it exits with exit code 1 and github actions aborts the build. 
         grep "$PLACEHOLDER" "$VERSION_FILE"
