.github/workflows/python-package-pypi.yaml

--- a/.github/workflows/python-package-pypi.yaml
+++ b/.github/workflows/python-package-pypi.yaml
@@ -33,7 +33,8 @@ jobs:
 
         # ensure the placeholder is there. If grep doesn't find the placeholder
         # it exits with exit code 1 and github actions aborts the build. 
-        grep "$PLACEHOLDER" "$VERSION_FILE"
+        grep "$PLACEHOLDER" "$VERSION_FILE1"
+        grep "$PLACEHOLDER" "$VERSION_FILE2"
         sed -i "s/$PLACEHOLDER/version = \"${VERSION}\"/g" "$VERSION_FILE1"
         sed -i "s/$PLACEHOLDER/version = \"${VERSION}\"/g" "$VERSION_FILE2"
       shell: bash
