--- a/.github/workflows/run_tests.yaml
+++ b/.github/workflows/run_tests.yaml
@@ -1,9 +1,34 @@
-name: Python package
+name: build-and-test
 
-on: [push]
+on: [push, pull_request]
 
 jobs:
   build:
+    name: Build package
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: 3.9
+    - name: Install pypa/build
+      run: >-
+        python -m pip install build --user
+    - name: Build a binary wheel and a source tarball
+      run: >-
+        python -m build --sdist --wheel --outdir dist/ .
+    - name: Upload artifact to GA
+      uses: actions/upload-artifact@v3
+      with:
+        name: dist
+        path: dist/
+        retention-days: 5
+        if-no-files-found: error # 'warn' or 'ignore' are also available, defaults to `warn`
+    
+  test:
+    name: Test package
+    requires: [build]
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -21,36 +46,21 @@ jobs:
           python-version: ${{ matrix.python-version }}
           environment-file: test_env.yml
           activate-environment: rat_test_env
-      # - name: Test conda
-      #   shell: bash -l {0}
-      #   run: |
-      #     which conda
-      #     conda info
-      #     conda env list
-      #     conda env export --from-history
-      # - name: Build and install RAT
-      #   shell: bash -l {0}
-      #   run: |
-      #     conda build .
-      #     conda install -c file://${CONDA_PREFIX}/conda-bld/ rat
-      # - name: Test RAT
-      #   shell: bash -l {0}
-      #   run: |
-      #     mkdir ~/rat_test
-      #     rat init -d ~/rat_test
-      #     rat test -d ~/rat_test
-      - name: Install RAT (develop mode)
+      - name: Test conda
         shell: bash -l {0}
         run: |
-          mamba env update --file environment.yml
-          conda develop src/
+          which conda
+          conda info
+          conda env list
+          conda env export --from-history
+      - name: Build and install RAT
+        shell: bash -l {0}
+        run: |
+          conda build conda
+          conda install -c file://${CONDA_PREFIX}/conda-bld/ rat
       - name: Test RAT
         shell: bash -l {0}
         run: |
           mkdir ~/rat_test
-          which conda
-          which python
-          conda list
-          mamba install ruamel.yaml --force-reinstall
-          python src/rat/cli/rat_cli.py init -d ~/rat_test -s ${{ secrets.SECRETS }}
-          python src/rat/cli/rat_cli.py test -d ~/rat_test -s ${{ secrets.SECRETS }}
+          rat init -d ~/rat_test
+          rat test -d ~/rat_test
