--- a/.github/workflows/run-tests.yaml
+++ b/.github/workflows/run-tests.yaml
@@ -68,7 +68,7 @@ jobs:
           channels: conda-forge, defaults
           channel-priority: true
           activate-environment: rat
-          environment-file: environment.yml
+          environment-file: dev-environment.yml
       - name: Build
         shell: bash -l {0}
         run: |
