added packages for pip in release 3.0.2

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,10 @@ dependencies = [
     "ruamel_yaml",
     "yaml",
     "gdown",
+    "requests",
+    "shapely",
+    "matplotlib"
+    "pyyaml"
 ]
 
 [project.urls]
