Updated pkg name yaml and ruamel_yaml to pypi name

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,13 +29,9 @@ dependencies = [
     "dask",
     "scipy",
     "scikit-learn",
-    "ruamel_yaml",
-    "yaml",
+    "ruamel.yaml",
+    "PyYAML",
     "gdown",
-    "requests",
-    "shapely",
-    "matplotlib",
-    "pyyaml"
 ]
 
 [project.urls]
