Trying ruamel-yaml instead of ruamel.yaml for pypi

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ dependencies = [
     "dask",
     "scipy",
     "scikit-learn",
-    "ruamel.yaml",
+    "ruamel-yaml",
     "PyYAML",
     "gdown",
 ]
