Adding Begginer's Tutorial KarnatakaFloods

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -62,6 +62,8 @@ nav:
 - Data Description:
     - 'Directory Structure': 'RAT_Data/DirectoryStructure.md'
     - 'Global Database': 'RAT_Data/GlobalDatabase.md'
+- Tutorials:
+    - 'Kickstart RAT for Beginners': 'Tutorials/KarnatakaFloods.md' 
 - Application:
     - 'Web App': 'Applications/WebApp.md'
 - Development:
