Added dependencies for plugins

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,8 @@ dependencies = [
     "ruamel-yaml",
     "PyYAML",
     "gdown",
-    "geonetworkx"
+    "geonetworkx",
+    "cfgrib"
 ]
 
 [project.urls]
