Added details on the ResORR plugin and BOT Filter to RAT docs

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -59,6 +59,7 @@ nav:
     - 'Multiple Basin Run': 'Configuration/basins_metadata.md'
 - Plugins:
     - 'Forecasting': 'Plugins/Forecasting.md'
+    - 'ResORR': 'Plugins/Resorr.md'
 - Data Description:
     - 'Directory Structure': 'RAT_Data/DirectoryStructure.md'
     - 'Global Database': 'RAT_Data/GlobalDatabase.md'
