--- a/.github/workflows/python-package-pypi.yaml
+++ b/.github/workflows/python-package-pypi.yaml
@@ -47,7 +47,7 @@ jobs:
         name: dist
         path: dist/
         retention-days: 5
-        if-no-files-found: error # 'warn' or 'ignore' are also available, defaults to `warn`
+        if-no-files-found: warn # 'warn' or 'ignore' are also available, defaults to `warn`
 
   publish:
     name: Publish distribution to PyPI
